--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live to Learn</title>
+    <link rel="icon" href="favicon.ico/favicon.png"> 
     <link href="./style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
+  <header data-bs-theme="dark">
+    <div class="text-bg-dark collapse" id="navbarHeader">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h4>About</h4>
+            <p class="text-body-secondary">In my transition to the IT industry, it was amazing to be working with the folks who built incredible solutions for our clients.<br><br>While working alongside them doing managerial tasks as a guy from non IT background, I felt a strong pull to build something on my own so that I have deeper understanding.<br><br>As a seed to this ambitious perspective, built my own website and deployed on GitHub which I use as a portfolio of my personal projects.<br><br>It is so much fun to learn the fundamentals and see the outcome in real-time. Here’s to more exciting learnings.</p>
+          </div>
+          <div class="col-sm-4 offset-md-1 py-4">
+            <h4>Contact</h4>
+            <ul class="list-unstyled">
+              <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li>
+              <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">Follow on LinkedIn</a></li>
+              <li><a href="https://www.instagram.com/yasind24/" class="text-white">Follow on Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+      <div class="container">
+        <a href="./index.html" class="navbar-brand d-flex align-items-center">
+        <strong><img src="./favicon.ico/favicon.png" width="20px"> Eternal Curiosity</strong>
+        </a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+  </header>
     <section id="header">
     <div class="px-4 py-5 mt-5 text-center">
         <img class="d-block mx-auto mb-4" src="./Assets/Images/suit.jpg" alt="" width="150" style="border-radius: 40%;">
