--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
+    <link rel="icon" href="favicon.ico/favicon.png"> 
     <link href="./style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <p class="p-announcement">Coming soon <svg xmlns="http://www.w3.org/2000/svg" width=35 fill="currentColor" class="bi bi-hourglass-split" viewBox="0 0 16 16">
-        <path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1h-11zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2h-7zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48V8.35zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/>
-      </svg></p>
-    <img src="./Assets/Images/WIP.png" alt="WIP" width=100%
+    <header data-bs-theme="dark">
+        <div class="text-bg-dark collapse" id="navbarHeader">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-8 col-md-7 py-4">
+                <h4>About</h4>
+                <p class="text-body-secondary">This is my portfolio page - Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
+                  <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
+              </svg>lve, where I explore, learn, build, and share the nuances of the world of technology that kindles my curiosity.</p>
+              </div>
+              <div class="col-sm-4 offset-md-1 py-4">
+                <h4>Contact</h4>
+                <ul class="list-unstyled">
+                  <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li>
+                  <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">Follow on LinkedIn</a></li>
+                  <li><a href="https://www.instagram.com/yasind24/" class="text-white">Follow on Instagram</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="navbar navbar-dark bg-dark shadow-sm">
+          <div class="px-3 container">
+            <a href="./portfolio.html" class="navbar-brand d-flex align-items-center">
+            <strong>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
+                <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
+            </svg>lve</strong>
+            </a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+        </div>
+      </header>
+      <section class="pt-5 text-center container">
+        <div class="row py-lg-0">
+          <div class="col-lg-8 col-md-8 mx-auto">
+            <h1 class="fw-dark"><p>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
+                <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
+            </svg>lve</p></h1>
+            <p class="lead-text-body-primary ">Technology IMO is like fire to early humans - we figured it out and evolved, but it needed & needs to be harnessed the right way to make wonders. (In a way, this is an evolution for me as I enhance my abilities for the new world).</p>
+            <p class="d-block">A journey of a thousand miles begins with a single step.</p>
+          </div>
+          <hr class="featurette-divider">
+        </div>
+      </section>
+      <section class="px-3 text-center container">
+        <div class="EIP">
+        <h5>EIP <div class="spinner-grow spinner-grow-sm" role="status">
+            <span class="sr-only"></span>
+          </div> Evolution In Progress</h5>
+        </div>
+        <div class="row mb-2 mt-2">
+          <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+              <div class="col p-4 d-flex flex-column position-static">
+                <strong class="d-inline-block mb-2 text-primary-emphasis">Case studies</strong>
+                <h3 class="mb-0">Generative AI</h3>
+                <div class="mb-1 text-body-secondary">Nov 30, 2023</div>
+                <p class="card-text mb-auto">Gen AI as a reigniting force for the technology world started shaping the future! What does it mean to us?</p>
+                <a href="./Blogs/GenAI_blog.html" class="icon-link gap-1 icon-link-hover stretched-link" style="justify-content: center;">
+                  Continue reading
+                </a>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+                <img src="./Assets/Images/Gen AI.jpg" width="200" height="250">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+              <div class="col p-4 d-flex flex-column position-static">
+                <strong class="d-inline-block mb-2 text-success-emphasis">Games</strong>
+                <h3 class="mb-0">Pixie</h3>
+                <div class="mb-1 text-body-secondary">Dec 1, 2023</div>
+                <p class="mb-auto">Life is a game, so why not a webgame to begin the journey. Pixie - built using HTML, CSS, and JavaScript.</p>
+                <a href="./Games/Pixie/index.html" class="icon-link gap-1 icon-link-hover stretched-link" style="justify-content: center;">
+                  Continue reading
+                </a>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+                <img src="./Assets/Images/Pixie.png" width="200" height="250">
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="container mt-2">
+        <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+        </svg></a></p>
+        <p>© Copyright 2023 Yasin 
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-laughing-fill" viewBox="0 0 16 16">
+          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5c0 .501-.164.396-.415.235C6.42 6.629 6.218 6.5 6 6.5c-.218 0-.42.13-.585.235C5.164 6.896 5 7 5 6.5 5 5.672 5.448 5 6 5s1 .672 1 1.5zm5.331 3a1 1 0 0 1 0 1A4.998 4.998 0 0 1 8 13a4.998 4.998 0 0 1-4.33-2.5A1 1 0 0 1 4.535 9h6.93a1 1 0 0 1 .866.5zm-1.746-2.765C10.42 6.629 10.218 6.5 10 6.5c-.218 0-.42.13-.585.235C9.164 6.896 9 7 9 6.5c0-.828.448-1.5 1-1.5s1 .672 1 1.5c0 .501-.164.396-.415.235z"/>
+        </svg></p>
+      </footer>
+  
 </body>
 </html>
