--- a/Blogs/GenAI_blog.html
+++ b/Blogs/GenAI_blog.html
@@ -70,6 +70,8 @@
           <dl>
             <dt>Machine Learning Breakthroughs:</dt>
             <dd>The adoption of machine learning techniques, especially deep learning, neural networks marked significant advancements.</dd>
+            <dt>Advancements in compute capacity</dt>
+            <dd>The compute capacity has been doubling every two years or so since 1960s when Moore predicted. With diversification and advancements in technology, Moore's law is about to last a few more decades at least.</dd>  
             <dt>Impact of Big Data:</dt>
             <dd>The explosion of data in the digital age fueled AI's learning capabilities, allowing for more sophisticated generative models.</dd>
             <dt>Advent of GANs:</dt>
