--- a/portfolio.html
+++ b/portfolio.html
@@ -87,11 +87,27 @@
                 <div class="mb-1 text-body-secondary">Dec 1, 2023</div>
                 <p class="mb-auto">Life is a game, so why not a webgame to begin the journey. Pixie - built using HTML, CSS, and JavaScript.</p>
                 <a href="./Games/Pixie/index.html" class="icon-link gap-1 icon-link-hover stretched-link" style="justify-content: center;">
-                  Continue reading
+                  To play
                 </a>
               </div>
               <div class="col-auto d-none d-lg-block">
                 <img src="./Assets/Images/Pixie.png" width="200" height="250">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+              <div class="col p-4 d-flex flex-column position-static">
+                <strong class="d-inline-block mb-2 text-success-emphasis">Games</strong>
+                <h3 class="mb-0">PVT</h3>
+                <div class="mb-1 text-body-secondary">Mar 30, 2024</div>
+                <p class="mb-auto">How vigilant/ alert are you through your day? Try this 3 minute Psychomotor Vigilance Test to find out.</p>
+                <a href="./Games/PVT/frontend/index.html" class="icon-link gap-1 icon-link-hover stretched-link" style="justify-content: center;">
+                  To play
+                </a>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+                <img src="./Assets/Images/PVT.png" width="200" height="250">
               </div>
             </div>
           </div>
