--- a/Games/PVT/frontend/index.html
+++ b/Games/PVT/frontend/index.html
@@ -3,25 +3,51 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pschomotor Vigilance Test</title>
+<title>Psychomotor Vigilance Test</title>
 <link rel="stylesheet" href="./style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">  
-    <h2>Pschomotor Vigilance Test</h2>
-<div id="test-area">
-  <span id="timer">Be ready</span>
-</div><br>
-<button type="button" class="btn btn-outline-dark" id="startBtn">Start</button>
-<button type="button" class="btn btn-outline-dark"id="stopBtn" disabled>Stop</button>
-<div id="results"></div>
-<div class="alert alert-secondary" role="alert">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
-        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-      </svg>Press the button X or M/ touch the screen to react when the number appears... DO IT AS QUICKLY AS POSSIBLE!
-  </div>
+<main class="container mt-5">
+<div class="text-center">
+    <h2>Psychomotor Vigilance Test</h2>
+    <div id="test-area" class="my-4 text-center">
+        <span id="timer">Be ready</span>
+    </div>
+    <button type="button" class="btn btn-outline-dark" id="startBtn">Start</button>
+    <button type="button" class="btn btn-outline-dark" id="stopBtn" disabled>Stop</button>
+    <div id="results" class="my-4"></div>
+    <div class="alert alert-secondary mt-3" role="alert">
+        Press 'X' or 'M' or touch the screen to reset the timer when the number appears... DO IT AS QUICKLY AS YOU CAN!
+    </div>
 </div>
+<div id="methodology" class="mt-5">
+    <h3>MRT Scale:</h3>
+    <table class="table table-striped text-center">
+      <thead>
+        <tr>
+          <th>Reaction Time (ms)</th>
+          <th>Scale (Severely fatigued – 10, Fresh as a daisy – 1)</th>
+          <th>#Lapses/ False Starts</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>>800</td><td>10</td><td>Lapse</td></tr>
+        <tr><td>701-800</td><td>9</td><td>Lapse</td></tr>
+        <tr><td>601-700</td><td>8</td><td>Lapse</td></tr>
+        <tr><td>501-600</td><td>7</td><td>Lapse</td></tr>
+        <tr><td>401-500</td><td>6</td><td>Acceptable</td></tr>
+        <tr><td>351-400</td><td>5</td><td>Acceptable</td></tr>
+        <tr><td>301-350</td><td>4</td><td>Acceptable</td></tr>
+        <tr><td>251-300</td><td>3</td><td>Acceptable</td></tr>
+        <tr><td>201-250</td><td>2</td><td>Acceptable</td></tr>
+        <tr><td>101-200</td><td>1</td><td>Acceptable</td></tr>
+        <tr><td><100</td><td>0</td><td>False start</td></tr>
+      </tbody>
+    </table>
+</div>
+</main>
 <script src="./script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-qeg2QF3F6L4MSXLYqeq5lDU7cjE64qHXdcLlPzWVQaCaj8m8DXtqk2AXhcuVhwcx" crossorigin="anonymous"></script>
 </body>
 </html>
