--- a/Games/PVT/frontend/index.html
+++ b/Games/PVT/frontend/index.html
@@ -18,7 +18,7 @@
     <button type="button" class="btn btn-outline-dark" id="stopBtn" disabled>Stop</button>
     <div id="results" class="my-4"></div>
     <div class="alert alert-secondary mt-3" role="alert">
-        Press 'X' or 'M' or touch the screen to reset the timer when the number appears... DO IT AS QUICKLY AS YOU CAN!
+        Press 'X' or 'M' or touch the screen to react the timer when the number appears... DO IT AS QUICKLY AS YOU CAN!
     </div>
 </div>
 <div id="methodology" class="mt-5">
