--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,7 @@
             <span class="sr-only"></span>
           </div> Evolution In Progress</h5>
         </div>
+        </div>
         <div class="row mb-2 mt-2">
           <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
@@ -98,6 +99,22 @@
           <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
+                <strong class="d-inline-block mb-2 text-primary-emphasis">Case studies</strong>
+                <h3 class="mb-0">GEO</h3>
+                <div class="mb-1 text-body-secondary">Feb 15, 2024</div>
+                <p class="card-text mb-auto">In the ever-evolving landscape of search technology, a new player has entered the arena - Generative Engine Optimization (GEO).</p>
+                <a href="./Blogs/geo.html" class="icon-link gap-1 icon-link-hover stretched-link" style="justify-content: center;">
+                  Continue reading
+                </a>
+              </div>
+              <div class="col-auto d-none d-lg-block">
+                <img src="./Assets/Images/GEO.png" width="200" height="250">
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+              <div class="col p-4 d-flex flex-column position-static">
                 <strong class="d-inline-block mb-2 text-success-emphasis">Games</strong>
                 <h3 class="mb-0">PVT</h3>
                 <div class="mb-1 text-body-secondary">Mar 30, 2024</div>
@@ -117,7 +134,7 @@
         <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
           <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
         </svg></a></p>
-        <p>© Copyright 2023 Yasin 
+        <p>© Copyright 2024 Yasin 
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-laughing-fill" viewBox="0 0 16 16">
           <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5c0 .501-.164.396-.415.235C6.42 6.629 6.218 6.5 6 6.5c-.218 0-.42.13-.585.235C5.164 6.896 5 7 5 6.5 5 5.672 5.448 5 6 5s1 .672 1 1.5zm5.331 3a1 1 0 0 1 0 1A4.998 4.998 0 0 1 8 13a4.998 4.998 0 0 1-4.33-2.5A1 1 0 0 1 4.535 9h6.93a1 1 0 0 1 .866.5zm-1.746-2.765C10.42 6.629 10.218 6.5 10 6.5c-.218 0-.42.13-.585.235C9.164 6.896 9 7 9 6.5c0-.828.448-1.5 1-1.5s1 .672 1 1.5c0 .501-.164.396-.415.235z"/>
         </svg></p>
