--- a/Blogs/geo.html
+++ b/Blogs/geo.html
@@ -55,7 +55,7 @@
 
           <p>How many of you use Gen AI for search? In the ever-evolving landscape of search technology, a new player has entered the arena - Generative Engine Optimization (GEO). As we slowly bid farewell to traditional search engines, GEO stands at the forefront, revolutionizing how we interact with information online.
         </p>
-          <img src="../Assets/Images/GEO-1.jpg" class="img-thumbnail" alt="Gen AI">
+          <img src="../Assets/Images/GEO-1.jpg" class="img-thumbnail" alt="Gen AI"><br>
           <a href="https://arxiv.org/pdf/2311.09735.pdf"><caption><em>Source: arxiv.org</em></caption></a>
           <hr>
           <p>This paradigm shift not only enhances user utility but also presents a unique challenge for content creators - maintaining visibility in a generative search engine world. With GEO, creators can now increase their content’s visibility by up to 40% in generative engine responses.</p>
