--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           Portfolio</a></p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             <a class="btn btn-dark btn-lg px-4 gap-3" href="#resume" role="button">Resume</a>
-            <a class="btn btn-outline-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
+            <a class="btn btn-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
           </div>
         </div>
       </div>
