--- a/pause.html
+++ b/pause.html
@@ -58,7 +58,7 @@
               Facebook</a></p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a class="btn btn-dark btn-lg px-4 gap-3" href="./index.html" role="button">Resume</a>
-                <a class="btn btn-outline-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
+                <a class="btn btn-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
               </div>
             </div>
           </div>
