--- a/pause.html
+++ b/pause.html
@@ -17,7 +17,9 @@
         <div class="row">
           <div class="col-sm-8 col-md-7 py-4">
             <h4>About</h4>
-            <p class="text-body-secondary">In my transition to the IT industry, it was amazing to be working with the folks who built incredible solutions for our clients.<br><br>While working alongside them doing managerial tasks as a guy from non IT background, I felt a strong pull to build something on my own so that I have deeper understanding.<br><br>As a seed to this ambitious perspective, built my own website and deployed on GitHub which I use as a portfolio of my personal projects.<br><br>It is so much fun to learn the fundamentals and see the outcome in real-time. Here’s to more exciting learnings.</p>
+                        <p class="text-body-secondary">Working alongside innovative teams, I’ve developed a strong desire to go beyond managerial tasks and immerse myself deeply in the product development process. My goal has always been to build products that not only solve problems but also deliver significant benefits to society at large.<br><br>
+              To turn this vision into reality, I’ve embarked on a path of continuous learning and hands-on experimentation, building and deploying personal projects on GitHub. These projects are more than just technical exercises; they are stepping stones toward mastering the art and science of product management.<br><br>
+              I believe in the power of technology to transform lives, and I am committed to developing solutions that make a meaningful impact. Here’s to the journey of building stuff for the world. </p>
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
             <h4>Contact</h4>
