--- a/pause.html
+++ b/pause.html
@@ -22,11 +22,13 @@
               I believe in the power of technology to transform lives, and I am committed to developing solutions that make a meaningful impact. Here’s to the journey of building stuff for the world. </p>
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
-            <h4>Contact</h4>
+            <h4>Lets talk!</h4>
             <ul class="list-unstyled">
-              <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li>
-              <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">Follow on LinkedIn</a></li>
-              <li><a href="https://www.instagram.com/yasind24/" class="text-white">Follow on Instagram</a></li>
+              <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li><br>
+              <i>Socials</i>
+              <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">LinkedIn</a></li>
+              <li><a href="https://x.com/yasiten" class="text-white">Twitter</a></li>
+              <li><a href="https://www.instagram.com/yasind24/" class="text-white">Instagram</a></li>
             </ul>
           </div>
         </div>
