--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,16 @@
                   <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
               </svg>lve, where I explore, learn, build, and share the nuances of the world of technology that kindles my curiosity.</p>
               </div>
-              <div class="col-sm-4 offset-md-1 py-4">
-                <h4>Contact</h4>
-                <ul class="list-unstyled">
-                  <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li>
-                  <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">Follow on LinkedIn</a></li>
-                  <li><a href="https://www.instagram.com/yasind24/" class="text-white">Follow on Instagram</a></li>
-                </ul>
-              </div>
+          <div class="col-sm-4 offset-md-1 py-4">
+            <h4>Lets talk!</h4>
+            <ul class="list-unstyled">
+              <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li><br>
+              <i>Socials</i>
+              <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">LinkedIn</a></li>
+              <li><a href="https://x.com/yasiten" class="text-white">Twitter</a></li>
+              <li><a href="https://www.instagram.com/yasind24/" class="text-white">Instagram</a></li>
+            </ul>
+          </div>
             </div>
           </div>
         </div>
