--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,9 @@
             <h1 class="fw-dark"><p>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
                 <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
             </svg>lve</p></h1>
-            <p class="lead-text-body-primary ">Technology IMO is like fire to early humans - we figured it out and evolved, but it needed & needs to be harnessed the right way to make wonders. (In a way, this is an evolution for me as I enhance my abilities for the new world).</p>
-            <p class="d-block">A journey of a thousand miles begins with a single step.</p>
+            <p class="lead-text-body-primary ">Technology, like fire to early humans, is a powerful tool that has driven our evolution. It must be harnessed wisely to unlock its full potential and create wonders. </p>
+            <p class="lead-text-body-primary "></p>This is my journey of evolution to building impactful products for a dynamic world.</p>
+            <p class="d-block"><b><i>"A journey of a thousand miles begins with a single step"</b></i></p>
           </div>
           <hr class="featurette-divider">
         </div>
