--- a/pause.html
+++ b/pause.html
@@ -7,21 +7,21 @@
     <link rel="icon" href="favicon.ico/favicon.png"> 
     <link href="./style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
 </head>
 <body>
-  <header data-bs-theme="dark">
+  <header data-bs-theme="dark" data-aos="fade-down">
     <div class="text-bg-dark collapse" id="navbarHeader">
       <div class="container">
         <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
+          <div class="col-sm-8 col-md-7 py-4" data-aos="fade-right">
             <h4>About</h4>
-                        <p class="text-body-secondary">Working alongside innovative teams, I’ve developed a strong desire to go beyond managerial tasks and immerse myself deeply in the product development process. My goal has always been to build products that not only solve problems but also deliver significant benefits to society at large.<br><br>
+            <p class="text-body-secondary">Working alongside innovative teams, I’ve developed a strong desire to go beyond managerial tasks and immerse myself deeply in the product development process. My goal has always been to build products that not only solve problems but also deliver significant benefits to society at large.<br><br>
               To turn this vision into reality, I’ve embarked on a path of continuous learning and hands-on experimentation, building and deploying personal projects on GitHub. These projects are more than just technical exercises; they are stepping stones toward mastering the art and science of product management.<br><br>
               I believe in the power of technology to transform lives, and I am committed to developing solutions that make a meaningful impact. Here’s to the journey of building stuff for the world. </p>
           </div>
-          <div class="col-sm-4 offset-md-1 py-4">
+          <div class="col-sm-4 offset-md-1 py-4" data-aos="fade-left">
             <h4>Lets talk!</h4>
             <ul class="list-unstyled">
               <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li><br>
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="navbar navbar-dark bg-dark shadow-sm" data-aos="fade-up">
       <div class="container">
         <a href="./index.html" class="navbar-brand d-flex align-items-center">
         <strong><img src="./favicon.ico/favicon.png" width="20px"> Eternal Curiosity</strong>
@@ -46,12 +46,12 @@
     </div>
   </header>
 <section id="header">
-        <div class="px-4 py-5 mt-5 text-center">
+        <div class="px-4 py-5 mt-5 text-center" data-aos="zoom-in">
             <img class="d-block mx-auto mb-4" src="./Assets/Images/Mypic.jpg" alt="" width="150" style="border-radius: 40%;">
             <h1 class="display-5 fw-bold text-body-emphasis">Mohamed Yasin</h1>
             <div class="col-lg-6 mx-auto">
-          <p class="lead mb-3">A generalist with vision driven by a deep curiosity about how the world works and a passion for building products that make a meaningful impact.</p>
-          <p class="lead mb-4">One step at a time and One better the next.</p>
+              <p class="lead mb-3">A generalist with vision driven by a deep curiosity about how the world works and a passion for building products that make a meaningful impact.</p>
+              <p class="lead mb-4">One step at a time and One better the next.</p>
               <p><a class="btn btn-outline-dark" href="https://www.instagram.com/yasind24/" role="button"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                 <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
               </svg>
@@ -61,7 +61,7 @@
                   <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
                 </svg>
               Twitter</a></p>
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center" data-aos="fade-up">
                 <a class="btn btn-dark btn-lg px-4 gap-3" href="./index.html" role="button">Resume</a>
                 <a class="btn btn-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
               </div>
@@ -69,40 +69,40 @@
           </div>
 </section>
 <section id="body">
-    <div class="row featurette pt-3">
+    <div class="row featurette pt-3" data-aos="fade-right">
         <div class="col-md-7">
             <h1>1993-2010</h1>
             <h2 class="featurette-heading fw-normal lh-1">The Kasi of south in TamilNadu: <span class="text-body-secondary">It’ll blow your mind.</span></h2>
           <p class="lead">I was born and brought up in this cradle of a small town under foothills of the Western Ghats. My parents live there (wouldn't leave how much ever I convince), so I go often. It's rawly beautiful.</p>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5" data-aos="fade-left">
             <img src="./Assets/Images/Tenkasi-places.jpg" alt="Tenkasi" class="rounded-3" width="100%">
         </div>
     </div>
       <hr class="featurette-divider">
-    <div class="row featurette">
+    <div class="row featurette" data-aos="fade-left">
         <div class="col-md-7 order-md-2">
           <h1>2010-2017</h1>
           <h2 class="featurette-heading fw-normal lh-1">First time away from home: <span class="text-body-secondary">Every boy tries to become a man.</span></h2>
           <p class="lead">Mine wasn't so different, learnt to keep my head up in the ocean with smart folks. In Coimbatore first at my bachelors, then in Chennai at my first job - figuring out my place in the world.</p>
         </div>
-        <div class="col-md-5 order-md-1">
+        <div class="col-md-5 order-md-1" data-aos="fade-right">
             <img src="./Assets/Images/Becoming-a-man.jpg" alt="Becoming-a-man" class="rounded-3" width="100%">
         </div>
     </div>
       <hr class="featurette-divider">
-    <div class="row featurette pt-3">
+    <div class="row featurette pt-3" data-aos="fade-right">
         <div class="col-md-7">
         <h1>2017-2020</h1>
         <h2 class="featurette-heading fw-normal lh-1">Spreading the wings: <span class="text-body-secondary">To broaden my limits and perspective.</span></h2>
       <p class="lead">Quit my job and travelled the country for sometime. During this pilgrimage, loved the city that never sleeps - Mumbai. Found a job & became a Mumbaikar. Mumbai taught me the most across dimensions.</p>
       </div>
-    <div class="col-md-5">
+    <div class="col-md-5" data-aos="fade-left">
         <img src="./Assets/Images/Mumbai.jpg" alt="Tenkasi" class="rounded-3" width="100%">
     </div>
     </div>
       <hr class="featurette-divider">
-    <div class="row featurette">
+    <div class="row featurette" data-aos="fade-left">
         <div class="col-md-7 order-md-2">
           <h1>2020-2022 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-through-heart-fill" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M2.854 15.854A.5.5 0 0 1 2 15.5V14H.5a.5.5 0 0 1-.354-.854l1.5-1.5A.5.5 0 0 1 2 11.5h1.793l3.103-3.104a.5.5 0 1 1 .708.708L4.5 12.207V14a.5.5 0 0 1-.146.354l-1.5 1.5ZM16 3.5a.5.5 0 0 1-.854.354L14 2.707l-1.006 1.006c.236.248.44.531.6.845.562 1.096.585 2.517-.213 4.092-.793 1.563-2.395 3.288-5.105 5.08L8 13.912l-.276-.182A23.825 23.825 0 0 1 5.8 12.323L8.31 9.81a1.5 1.5 0 0 0-2.122-2.122L3.657 10.22a8.827 8.827 0 0 1-1.039-1.57c-.798-1.576-.775-2.997-.213-4.093C3.426 2.565 6.18 1.809 8 3.233c1.25-.98 2.944-.928 4.212-.152L13.292 2 12.147.854A.5.5 0 0 1 12.5 0h3a.5.5 0 0 1 .5.5v3Z"/>
@@ -110,12 +110,12 @@
           <h2 class="featurette-heading fw-normal lh-1">Finding my partner, <span class="text-body-secondary">my best friend, my love, my anchor.</span></h2>
           <p class="lead">We fought the world (literally) to be together. We learned, loved and grew together through the tapestry of cruel, kind and beautiful, chaotic reality. I can't wholly express how much I love this woman! Words won't do justice to some things I guess.</p>
         </div>
-        <div class="col-md-5 order-md-1">
+        <div class="col-md-5 order-md-1" data-aos="fade-right">
             <img src="./Assets/Images/Love.jpg" alt="Becoming-a-man" class="rounded-3" width="100%">
         </div>
     </div>
       <hr class="featurette-divider">
-    <div class="row featurette pt-3">
+    <div class="row featurette pt-3" data-aos="fade-right">
         <div class="col-md-7">
         <h1>2022-present <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house-heart-fill" viewBox="0 0 16 16">
             <path d="M7.293 1.5a1 1 0 0 1 1.414 0L11 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l2.354 2.353a.5.5 0 0 1-.708.707L8 2.207 1.354 8.853a.5.5 0 1 1-.708-.707L7.293 1.5Z"/>
@@ -127,14 +127,14 @@
         Uyra: Life (Tamil)<br>
         Merak: a feeling of bliss and the sense of oneness with the universe (Serbian)</p>
       </div>
-    <div class="col-md-5">
+    <div class="col-md-5" data-aos="fade-left">
         <img src="./Assets/Images/Hira.jpg" alt="Tenkasi" class="rounded-3" width="100%">
     </div>
     </div>
     <hr class="featurette-divider">
-    <h3>And life goes on...</h3>
+    <h3 data-aos="zoom-in">And life goes on...</h3>
 </section>
-<div class="container my-5">
+<div class="container my-5" data-aos="fade-up">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
         <h1 class="display-5 fw-bold lh-1 text-body-emphasis">Drop by drop is the water pot filled. Likewise, the wise man, gathering it little by little, fills himself with good.</h1>
@@ -146,14 +146,21 @@
       </div>
     </div>
   </div>   
-<footer class="container mt-2">
-        <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
-          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
-        </svg></a></p>
-        <p>© Copyright 2024 Yasin (coz it's my story) <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-laughing-fill" viewBox="0 0 16 16">
-          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5c0 .501-.164.396-.415.235C6.42 6.629 6.218 6.5 6 6.5c-.218 0-.42.13-.585.235C5.164 6.896 5 7 5 6.5 5 5.672 5.448 5 6 5s1 .672 1 1.5zm5.331 3a1 1 0 0 1 0 1A4.998 4.998 0 0 1 8 13a4.998 4.998 0 0 1-4.33-2.5A1 1 0 0 1 4.535 9h6.93a1 1 0 0 1 .866.5zm-1.746-2.765C10.42 6.629 10.218 6.5 10 6.5c-.218 0-.42.13-.585.235C9.164 6.896 9 7 9 6.5c0-.828.448-1.5 1-1.5s1 .672 1 1.5c0 .501-.164.396-.415.235z"/>
-        </svg></p>
-</footer>
-  
+  <footer class="container mt-2">
+    <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+      <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+    </svg></a></p>
+    <p>© Copyright 2023 Yasin 
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-sunglasses" viewBox="0 0 16 16">
+        <path d="M4.968 9.75a.5.5 0 1 0-.866.5A4.5 4.5 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.5 3.5 0 0 1 8 11.5a3.5 3.5 0 0 1-3.032-1.75M7 5.116V5a1 1 0 0 0-1-1H3.28a1 1 0 0 0-.97 1.243l.311 1.242A2 2 0 0 0 4.561 8H5a2 2 0 0 0 1.994-1.839A3 3 0 0 1 8 6c.393 0 .74.064 1.006.161A2 2 0 0 0 11 8h.438a2 2 0 0 0 1.94-1.515l.311-1.242A1 1 0 0 0 12.72 4H10a1 1 0 0 0-1 1v.116A4.2 4.2 0 0 0 8 5c-.35 0-.69.04-1 .116"/>
+        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-1 0A7 7 0 1 0 1 8a7 7 0 0 0 14 0"/>
+      </svg></p>
+  </footer>
+
+<!-- Include AOS Library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
