--- a/portfolio.html
+++ b/portfolio.html
@@ -7,20 +7,21 @@
     <link rel="icon" href="favicon.ico/favicon.png"> 
     <link href="./style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header data-bs-theme="dark">
+    <header data-bs-theme="dark" data-aos="fade-down">
         <div class="text-bg-dark collapse" id="navbarHeader">
           <div class="container">
             <div class="row">
-              <div class="col-sm-8 col-md-7 py-4">
+              <div class="col-sm-8 col-md-7 py-4" data-aos="fade-right">
                 <h4>About</h4>
                 <p class="text-body-secondary">This is my portfolio page - Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
                   <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
               </svg>lve, where I explore, learn, build, and share the nuances of the world of technology that kindles my curiosity.</p>
               </div>
-          <div class="col-sm-4 offset-md-1 py-4">
+          <div class="col-sm-4 offset-md-1 py-4" data-aos="fade-left">
             <h4>Lets talk!</h4>
             <ul class="list-unstyled">
               <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li><br>
@@ -33,7 +34,7 @@
             </div>
           </div>
         </div>
-        <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="navbar navbar-dark bg-dark shadow-sm" data-aos="fade-up">
           <div class="px-3 container">
             <a href="./portfolio.html" class="navbar-brand d-flex align-items-center">
             <strong>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
@@ -46,30 +47,29 @@
           </div>
         </div>
       </header>
-      <section class="pt-5 text-center container">
+      <section class="pt-5 text-center container" data-aos="zoom-in">
         <div class="row py-lg-0">
-          <div class="col-lg-8 col-md-8 mx-auto">
+          <div class="col-lg-8 col-md-8 mx-auto" data-aos="fade-up">
             <h1 class="fw-dark"><p>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
                 <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
             </svg>lve</p></h1>
-            <p class="lead-text-body-primary ">Technology, like fire to early humans, is a powerful tool that has driven our evolution. It must be harnessed wisely to unlock its full potential and create wonders. </p>
-            <p class="lead-text-body-primary "></p>This is my journey of evolution to building impactful products for a dynamic world.</p>
+            <p class="lead-text-body-primary">Technology, like fire to early humans, is a powerful tool that has driven our evolution. It must be harnessed wisely to unlock its full potential and create wonders. </p>
+            <p class="lead-text-body-primary"></p>This is my journey of evolution to building impactful products for a dynamic world.</p>
             <p class="d-block"><b><i>"A journey of a thousand miles begins with a single step"</b></i></p>
           </div>
           <hr class="featurette-divider">
         </div>
       </section>
-      <section class="px-3 text-center container">
-        <div class="EIP">
+      <section class="px-3 text-center container" data-aos="fade-up">
+        <div class="EIP" data-aos="fade-right">
         <h5>EIP <div class="spinner-grow spinner-grow-sm" role="status">
             <span class="sr-only"></span>
           </div> Evolution In Progress</h5>
         </div>
-        </div>
         <div class="row mb-2 mt-2">
-          <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-              <div class="col p-4 d-flex flex-column position-static">
+          <div class="col-md-6" data-aos="fade-up">
+            <div class="card h-100 border rounded overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
+              <div class="card-body p-4 d-flex flex-column">
                 <strong class="d-inline-block mb-2 text-primary-emphasis">Case studies</strong>
                 <h3 class="mb-0">Generative AI</h3>
                 <div class="mb-1 text-body-secondary">Nov 30, 2023</div>
@@ -83,9 +83,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-              <div class="col p-4 d-flex flex-column position-static">
+          <div class="col-md-6" data-aos="fade-up">
+            <div class="card h-100 border rounded overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
+              <div class="card-body p-4 d-flex flex-column">
                 <strong class="d-inline-block mb-2 text-success-emphasis">Games</strong>
                 <h3 class="mb-0">Pixie</h3>
                 <div class="mb-1 text-body-secondary">Dec 1, 2023</div>
@@ -99,9 +99,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-              <div class="col p-4 d-flex flex-column position-static">
+          <div class="col-md-6" data-aos="fade-up">
+            <div class="card h-100 border rounded overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
+              <div class="card-body p-4 d-flex flex-column">
                 <strong class="d-inline-block mb-2 text-primary-emphasis">Case studies</strong>
                 <h3 class="mb-0">GEO</h3>
                 <div class="mb-1 text-body-secondary">Feb 15, 2024</div>
@@ -115,9 +115,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-              <div class="col p-4 d-flex flex-column position-static">
+          <div class="col-md-6" data-aos="fade-up">
+            <div class="card h-100 border rounded overflow-hidden flex-md-row mb-4 shadow-sm position-relative">
+              <div class="card-body p-4 d-flex flex-column">
                 <strong class="d-inline-block mb-2 text-success-emphasis">Games</strong>
                 <h3 class="mb-0">PVT</h3>
                 <div class="mb-1 text-body-secondary">Mar 30, 2024</div>
@@ -133,15 +133,21 @@
           </div>
         </div>
       </section>
-      <footer class="container mt-2">
+      <footer class="container mt-5">
         <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
           <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
         </svg></a></p>
-        <p>© Copyright 2024 Yasin 
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-laughing-fill" viewBox="0 0 16 16">
-          <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5c0 .501-.164.396-.415.235C6.42 6.629 6.218 6.5 6 6.5c-.218 0-.42.13-.585.235C5.164 6.896 5 7 5 6.5 5 5.672 5.448 5 6 5s1 .672 1 1.5zm5.331 3a1 1 0 0 1 0 1A4.998 4.998 0 0 1 8 13a4.998 4.998 0 0 1-4.33-2.5A1 1 0 0 1 4.535 9h6.93a1 1 0 0 1 .866.5zm-1.746-2.765C10.42 6.629 10.218 6.5 10 6.5c-.218 0-.42.13-.585.235C9.164 6.896 9 7 9 6.5c0-.828.448-1.5 1-1.5s1 .672 1 1.5c0 .501-.164.396-.415.235z"/>
-        </svg></p>
+        <p>© Copyright 2023 Yasin 
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-sunglasses" viewBox="0 0 16 16">
+            <path d="M4.968 9.75a.5.5 0 1 0-.866.5A4.5 4.5 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.5 3.5 0 0 1 8 11.5a3.5 3.5 0 0 1-3.032-1.75M7 5.116V5a1 1 0 0 0-1-1H3.28a1 1 0 0 0-.97 1.243l.311 1.242A2 2 0 0 0 4.561 8H5a2 2 0 0 0 1.994-1.839A3 3 0 0 1 8 6c.393 0 .74.064 1.006.161A2 2 0 0 0 11 8h.438a2 2 0 0 0 1.94-1.515l.311-1.242A1 1 0 0 0 12.72 4H10a1 1 0 0 0-1 1v.116A4.2 4.2 0 0 0 8 5c-.35 0-.69.04-1 .116"/>
+            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-1 0A7 7 0 1 0 1 8a7 7 0 0 0 14 0"/>
+          </svg></p>
       </footer>
-  
+
+    <!-- Include AOS Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
