--- a/pause.html
+++ b/pause.html
@@ -68,11 +68,10 @@
             </div>
           </div>
 </section>
-<section id="resume">
-  <div class="resumehead"> 
-    <h2>My Personal Journey</h2>
+<div class="resumehead"> 
+  <h2>My Personal Journey</h2>
 </div>
-<div class="pbody">
+<section id="body">
     <div class="row featurette pt-3" data-aos="fade-right">
         <div class="col-md-7">
             <h1>1993-2010</h1>
@@ -137,7 +136,6 @@
     </div>
     <hr class="featurette-divider">
     <h3 data-aos="zoom-in">And life goes on...</h3>
-  </div>
 </section>
 <div class="container my-5" data-aos="fade-up">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
