--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       </div>
     </div>
   </header>
-    <section id="header">
-    <div class="px-4 py-5 mt-5 text-center" data-aos="zoom-in">
+        <section id="header">
+    <div class="px-4 py-5 mt-5 text-center hero" data-aos="zoom-in">
         <img class="d-block mx-auto mb-4" src="./Assets/Images/suit.jpg" alt="" width="150" style="border-radius: 40%;">
         <h1 class="display-5 fw-bold text-body-emphasis">Mohamed Yasin</h1>
         <div class="col-lg-6 mx-auto">
@@ -64,6 +64,20 @@
             <a class="btn btn-dark btn-lg px-4 gap-3" href="#resume" role="button">Resume</a>
             <a class="btn btn-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
           </div>
+          <div class="area"> 
+            <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+    </ul>
+  </div>
         </div>
       </div>
     </section>
