--- a/pause.html
+++ b/pause.html
@@ -66,7 +66,21 @@
                 <a class="btn btn-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
               </div>
             </div>
-          </div>
+            <div class="area"> 
+              <ul class="circles">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+      </ul>
+    </div>
+  </div>
 </section>
 <div class="resumehead"> 
   <h2>My Personal Journey</h2>
