--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 <body>
   <header data-bs-theme="dark">
@@ -45,7 +46,7 @@
       </div>
     </div>
   </header>
-        <section id="header">
+    <section id="header">
     <div class="px-4 py-5 mt-5 text-center hero" data-aos="zoom-in">
         <img class="d-block mx-auto mb-4" src="./Assets/Images/suit.jpg" alt="" width="150" style="border-radius: 40%;">
         <h1 class="display-5 fw-bold text-body-emphasis">Mohamed Yasin</h1>
