--- a/pause.html
+++ b/pause.html
@@ -63,7 +63,7 @@
               Twitter</a></p>
               <div class="d-grid gap-2 d-sm-flex justify-content-sm-center" data-aos="fade-up">
                 <a class="btn btn-dark btn-lg px-4 gap-3" href="./index.html" role="button">Resume</a>
-                <a class="btn btn-dark btn-lg px-4 gap-3" href="./pause.html" role="button">Pause?</a>
+                <a class="btn btn-dark btn-lg px-4 gap-3" href="#body" role="button">Pause?</a>
               </div>
             </div>
             <div class="area"> 
@@ -82,10 +82,11 @@
     </div>
   </div>
 </section>
-<div class="resumehead"> 
-  <h2>My Personal Journey</h2>
-</div>
 <section id="body">
+  <div class="resumehead"> 
+    <h2>My Personal Journey</h2>
+  </div>
+  <div class="resumearea1">
     <div class="row featurette pt-3" data-aos="fade-right">
         <div class="col-md-7">
             <h1>1993-2010</h1>
@@ -150,6 +151,7 @@
     </div>
     <hr class="featurette-divider">
     <h3 data-aos="zoom-in">And life goes on...</h3>
+  </div>
 </section>
 <div class="container my-5" data-aos="fade-up">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
