--- a/pause.html
+++ b/pause.html
@@ -46,7 +46,7 @@
     </div>
   </header>
 <section id="header">
-        <div class="px-4 py-5 mt-5 text-center" data-aos="zoom-in">
+        <div class="px-4 py-5 text-center" data-aos="zoom-in">
             <img class="d-block mx-auto mb-4" src="./Assets/Images/Mypic.jpg" alt="" width="150" style="border-radius: 40%;">
             <h1 class="display-5 fw-bold text-body-emphasis">Mohamed Yasin</h1>
             <div class="col-lg-6 mx-auto">
