--- a/Games/PVT/frontend/index.html
+++ b/Games/PVT/frontend/index.html
@@ -5,10 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Psychomotor Vigilance Test</title>
 <link rel="stylesheet" href="./style.css">
-<link rel="icon" href="../../../favicon.ico/favicon.png">
+<link rel="icon" href="../../../favicon.ico/favicon.png"> 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
   <header data-bs-theme="dark">
@@ -34,7 +35,7 @@
     </div>
     <div class="navbar navbar-dark bg-dark shadow-sm">
       <div class="px-3 container">
-        <a href="../../../portfolio.html" class="navbar-brand d-flex align-items-center">
+        <a href="../portfolio.html" class="navbar-brand d-flex align-items-center">
         <strong>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
             <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
         </svg>lve</strong>
@@ -44,7 +45,7 @@
         </button>
       </div>
     </div>
-  </header>
+    </header>  
 <main class="container mt-5">
 <div class="text-center">
     <h2>Psychomotor Vigilance Test</h2>
@@ -55,7 +56,7 @@
     <button type="button" class="btn btn-outline-dark" id="stopBtn" disabled>Stop</button>
     <div id="results" class="my-4"></div>
     <div class="alert alert-secondary mt-3" role="alert">
-        Press 'X' or 'M' or touch the screen to react the timer when the number appears... DO IT AS QUICKLY AS YOU CAN!
+        Press 'X' or 'M' or touch the screen to reset the timer when the number appears... DO IT AS QUICKLY AS YOU CAN!
     </div>
 </div>
 <div id="methodology" class="mt-5">
@@ -86,5 +87,15 @@
 </main>
 <script src="./script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-qeg2QF3F6L4MSXLYqeq5lDU7cjE64qHXdcLlPzWVQaCaj8m8DXtqk2AXhcuVhwcx" crossorigin="anonymous"></script>
+<footer class="container mt-5">
+  <p class="float-end"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="black" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+  </svg></a></p>
+  <p>© Copyright 2023 Yasin 
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-sunglasses" viewBox="0 0 16 16">
+      <path d="M4.968 9.75a.5.5 0 1 0-.866.5A4.5 4.5 0 0 0 8 12.5a4.5 4.5 0 0 0 3.898-2.25.5.5 0 1 0-.866-.5A3.5 3.5 0 0 1 8 11.5a3.5 3.5 0 0 1-3.032-1.75M7 5.116V5a1 1 0 0 0-1-1H3.28a1 1 0 0 0-.97 1.243l.311 1.242A2 2 0 0 0 4.561 8H5a2 2 0 0 0 1.994-1.839A3 3 0 0 1 8 6c.393 0 .74.064 1.006.161A2 2 0 0 0 11 8h.438a2 2 0 0 0 1.94-1.515l.311-1.242A1 1 0 0 0 12.72 4H10a1 1 0 0 0-1 1v.116A4.2 4.2 0 0 0 8 5c-.35 0-.69.04-1 .116"/>
+      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-1 0A7 7 0 1 0 1 8a7 7 0 0 0 14 0"/>
+    </svg></p>
+</footer>
 </body>
 </html>
