--- a/Blogs/GenAI_blog.html
+++ b/Blogs/GenAI_blog.html
@@ -49,11 +49,8 @@
   </header>
     <section class="px-3 container"> 
         <div class="row-cols-1">
-        <h3 class="pb-4 mb-4 mt-3 fst-italic border-bottom">
-          From the Eternal Curiosity
-        </h3>
         <article class="blog-post">
-          <h2 class="display-5 link-body-emphasis mb-1">Shaping the future: Impact of Gen AI</h2>
+          <h2 class="display-5 link-body-emphasis mt-3 mb-1">Shaping the future: Impact of Gen AI</h2>
           <p class="blog-post-meta">Nov 30, 2023 by <a href="../index.html">Yasin</a></p>
 
           <p>In the realm of technological advancements, few innovations hold as much transformative potential as Generative Artificial Intelligence (AI). What does it hold for the world? How do we evolve from here?</p>
