--- a/Blogs/geo.html
+++ b/Blogs/geo.html
@@ -10,47 +10,47 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header data-bs-theme="dark">
+  <header data-bs-theme="dark" data-aos="fade-down">
     <div class="text-bg-dark collapse" id="navbarHeader">
       <div class="container">
         <div class="row">
-          <div class="col-sm-8 col-md-7 py-4">
+          <div class="col-sm-8 col-md-7 py-4" data-aos="fade-right">
             <h4>About</h4>
             <p class="text-body-secondary">This is my portfolio page - Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
               <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
-          </svg>lve, where I explore, learn, build, and share the nuances of the world of technology that kindles my curiosity.</p>
+            </svg>lve, where I explore, learn, build, and share the nuances of the world of technology that kindles my curiosity.</p>
           </div>
-          <div class="col-sm-4 offset-md-1 py-4">
-            <h4>Contact</h4>
+          <div class="col-sm-4 offset-md-1 py-4" data-aos="fade-left">
+            <h4>Lets talk!</h4>
             <ul class="list-unstyled">
-              <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li>
-              <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">Follow on LinkedIn</a></li>
-              <li><a href="https://www.instagram.com/yasind24/" class="text-white">Follow on Instagram</a></li>
+              <li><a href="https://yasind24.github.io/eternal_curiosity/" class="text-white">Website</a></li><br>
+              <i>Socials</i>
+              <li><a href="https://www.linkedin.com/in/yasin-d/" class="text-white">LinkedIn</a></li>
+              <li><a href="https://x.com/yasiten" class="text-white">Twitter</a></li>
+              <li><a href="https://www.instagram.com/yasind24/" class="text-white">Instagram</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-      <div class="px-3 container">
-        <a href="../portfolio.html" class="navbar-brand d-flex align-items-center">
-        <strong>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
+    <div class="navbar navbar-dark bg-dark shadow-sm d-flex align-items-center justify-content-between" data-aos="fade-up">
+      <div class="container d-flex align-items-center justify-content-between">
+        <a href="./portfolio.html" class="navbar-brand d-flex align-items-center">
+          <strong>Ev<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fire" viewBox="0 0 16 16">
             <path d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"/>
-        </svg>lve</strong>
+          </svg>lve</strong>
         </a>
+        <a href="https://yasind24.github.io/eternal_curiosity/" class="text-white ms-auto me-3" style="font-size: 14px;">From Eternal Curiosity</a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
       </div>
     </div>
-    </header>
+  </header>
     <section class="px-3 container"> 
         <div class="row-cols-1">
-        <h3 class="pb-4 mb-4 mt-3 fst-italic border-bottom">
-          From the Eternal Curiosity
-        </h3>
         <article class="blog-post">
-          <h2 class="display-5 link-body-emphasis mb-1">Generative Engine Optimization (GEO):</h2>
+          <h2 class="display-5 link-body-emphasis mt-3 mb-1">Generative Engine Optimization (GEO):</h2>
           <p class="blog-post-meta">Feb 15, 2024 by <a href="../index.html">Yasin</a></p>
 
           <p>How many of you use Gen AI for search? In the ever-evolving landscape of search technology, a new player has entered the arena - Generative Engine Optimization (GEO). As we slowly bid farewell to traditional search engines, GEO stands at the forefront, revolutionizing how we interact with information online.
