--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
                   <strong class="d-inline-block mb-2 text-primary-emphasis">Case studies</strong>
                   <h3 class="mb-0">GEO</h3>
                   <div class="mb-1 text-body-secondary">Feb 15, 2024</div>
-                  <p class="card-text mb-auto">In the ever-evolving landscape of search technology, a new player has entered the arena - Generative Engine Optimization.</p>
+                  <p class="card-text mb-auto">In the landscape of search technology, a new player has entered the arena - Generative Engine Optimization.</p>
                   <a href="./Blogs/geo.html" class="icon-link gap-1 icon-link-hover stretched-link" style="justify-content: center;">
                     Continue reading
                   </a>
